control_server/static/css/camera-control-simplified.css
html, body {
    position: relative;
    height: 100%;
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
}

.btn {
    height:50px;
    width: 140px;
    text-align: center;
}

#system-state {
    width: 10%;
    margin-top: 3%;
}

#countdown {
    font-size: 130px;
}

.loader {
    border: 16px solid #DBDBDB;
    border-radius: 50%; /* Creates a circle */
    border-top: 16px solid #2ECC71;
    position: absolute;
    left: 50%;
    top: 50%;
    margin: -100px 0 0 -100px;
    width: 200px;
    height: 200px;
    animation: spin 1s linear infinite; /* Creates a 1 sec infinite animation; same speed from start to end */
}
  
/* Animation code */
@keyframes spin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
}

#loader-message {
    margin-top: 25%;
}

#retake-button {
    margin-right: 10%;
}

#save-button {
    margin-left: 10%;
}

#access-code {
    width: 35%;
    border: 2px solid black;
}

